# pgsanity

./: .gitignore  .pre-commit-hooks.yaml  .travis.yml  LICENSE  README  README.md  TODO  check.sh  pep8.sh  pyproject.toml  setup.py  test.sh
docker/: Dockerfile  README.md
pgsanity/: ecpg.py  pgsanity.py  sqlprep.py
pgsanity/test/: test_ecpg.py  test_sqlprep.py
test/: __init__.py  test_ecpg.py  test_pgsanity.py  test_sqlprep.py
