[project]
name = "pgsanity"
version = "0.3.0"
description = "Check syntax of sql for PostgreSQL"
authors = [
    { name = "Mark Drago", email = "markdrago@gmail.com" }
]   
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
keywords = ["pgsanity", "sql", "syntax", "postgresql", "postgres"]
requires-python = ">=3.9"
dependencies = []
classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "Topic :: Database",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: Utilities"
]

[project.urls]
homepage = "https://github.com/markdrago/pgsanity"
source = "https://github.com/markdrago/pgsanity.git"
issues = "https://github.com/markdrago/pgsanity/issues"
download = "http://pypi.python.org/pypi/pgsanity"

[project.scripts]
pgsanity = "pgsanity.pgsanity:main"

[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[tool.ruff.lint]
# Defaults (`E4`, E7`, `E9`, and `F`)
# B: flake8-bugbear (`B`)
# Q: flake8-quotes (`Q`)
# I: isort
select = ["E4", "E7", "E9", "F", "B", "Q", "I"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.13.1",
]
